[gd_scene load_steps=6 format=2]

[ext_resource path="res://fonts/PressStart2P-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/new_game.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 26
outline_size = 1
outline_color = Color( 0.345098, 0.345098, 0.345098, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 12
outline_size = 1
outline_color = Color( 0.345098, 0.345098, 0.345098, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
outline_size = 1
outline_color = Color( 0.345098, 0.345098, 0.345098, 1 )
font_data = ExtResource( 1 )

[node name="label_node" type="Node2D"]
z_index = 1
script = ExtResource( 2 )

[node name="rect" type="ColorRect" parent="."]
margin_right = 352.0
margin_bottom = 640.0
focus_mode = 1
mouse_filter = 2
color = Color( 0, 0, 0, 0.6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="game_over_label" type="Label" parent="."]
margin_left = 116.0
margin_top = 181.0
margin_right = 236.0
margin_bottom = 236.0
custom_fonts/font = SubResource( 1 )
text = "GAME OVER"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="go_pts_label" type="Label" parent="game_over_label"]
margin_left = -116.0
margin_top = 62.0
margin_right = 236.0
margin_bottom = 78.0
custom_fonts/font = SubResource( 2 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="new_game" type="Button" parent="game_over_label"]
margin_top = 200.0
margin_right = 128.0
margin_bottom = 220.0
mouse_filter = 1
shortcut_in_tooltip = false
action_mode = 0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="new_game_label" type="Label" parent="game_over_label/new_game"]
margin_right = 128.0
margin_bottom = 20.0
focus_mode = 2
mouse_filter = 1
custom_fonts/font = SubResource( 3 )
text = "New Game"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_up" from="game_over_label/new_game" to="." method="_on_new_game_button_up"]
[connection signal="pressed" from="game_over_label/new_game" to="." method="_on_new_game_pressed"]
[connection signal="mouse_entered" from="game_over_label/new_game/new_game_label" to="." method="_on_new_game_label_mouse_entered"]
[connection signal="mouse_exited" from="game_over_label/new_game/new_game_label" to="." method="_on_new_game_label_mouse_exited"]
